# lightyear-matchmaker

./: .gitignore  Cargo.toml  README.md  justfile
crates/lightyear_matchmaker/: Cargo.toml
crates/lightyear_matchmaker/src/: lib.rs
crates/lightyear_matchmaker_bevy_client/: Cargo.toml
crates/lightyear_matchmaker_bevy_client/src/: lib.rs
crates/lightyear_matchmaker_bevy_server/: Cargo.toml
crates/lightyear_matchmaker_bevy_server/src/: lib.rs
crates/lightyear_matchmaker_core/: Cargo.toml
crates/lightyear_matchmaker_core/src/: error.rs  game_server.rs  identity.rs  lib.rs  lobby.rs  protocol.rs  provider.rs  state.rs  token.rs
crates/lightyear_matchmaker_lightyear/: Cargo.toml
crates/lightyear_matchmaker_lightyear/src/: lib.rs
crates/lightyear_matchmaker_nats/: Cargo.toml
crates/lightyear_matchmaker_nats/src/: config.rs  lib.rs  lifecycle.rs  names.rs
crates/lightyear_matchmaker_provider_edgegap/: Cargo.toml
crates/lightyear_matchmaker_provider_edgegap/src/: lib.rs
crates/lightyear_matchmaker_provider_gameflow/: Cargo.toml
crates/lightyear_matchmaker_provider_gameflow/src/: lib.rs
crates/lightyear_matchmaker_provider_static/: Cargo.toml
crates/lightyear_matchmaker_provider_static/src/: lib.rs
crates/lightyear_matchmaker_server/: Cargo.toml
crates/lightyear_matchmaker_server/src/: config.rs  lib.rs  lobby.rs  main.rs  metrics.rs
crates/lightyear_matchmaker_server/tests/: nats_smoke.rs
docs/: architecture-plan.md  asyncapi.yaml  bevy-client.md  implementation_status.md  open-match2-integration.md  openapi.yaml  protocol.md  runtime-model.md  state-machines.md
examples/bevy_local_static/config/: game-server.compose.toml  game-server.local.toml  matchmaker.compose.toml  matchmaker.edgegap-mock.local.toml  matchmaker.edgegap.local.example.toml  matchmaker.local.toml  matchmaker.nats.local.toml  static-servers.toml
examples/bevy_local_static/docker-compose/: .env.example  compose.local.yml
examples/bevy_local_static/podman/: compose.local.yml
examples/bevy_local_static/scripts/: smoke_full_local.sh
examples/bevy_local_static/server/: Cargo.toml
examples/bevy_local_static/server/src/: main.rs
