[package]
name = "lightyear_matchmaker_bevy_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
futures-util.workspace = true
lightyear_matchmaker_core.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-tungstenite-wasm = "0.3.1"
wasm-bindgen-futures = "0.4"

[lints]
workspace = true
