[package]
name = "lightyear_matchmaker_nats"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "NATS-backed coordination for Lightyear Matchmaker"

[dependencies]
async-nats.workspace = true
futures-util.workspace = true
lightyear_matchmaker_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
