[package]
name = "lightyear_matchmaker_provider_gameflow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Gameflow provider bridge for Lightyear Matchmaker"

[dependencies]
lightyear_matchmaker_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
