[package]
name = "lightyear_matchmaker_provider_static"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Static server provider for Lightyear Matchmaker"

[dependencies]
lightyear_matchmaker_core.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
