[package]
name = "lightyear_matchmaker_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Deployable matchmaker server for Lightyear Matchmaker"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
lightyear_matchmaker_core.workspace = true
lightyear_matchmaker_lightyear.workspace = true
lightyear_matchmaker_nats.workspace = true
lightyear_matchmaker_provider_edgegap.workspace = true
lightyear_matchmaker_provider_static.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures-util.workspace = true
lightyear_matchmaker_bevy_client.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
