[package]
name = "bevy_local_static_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Headless Bevy static game-server example for Lightyear Matchmaker"

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
clap.workspace = true
lightyear_matchmaker_bevy_server.workspace = true
lightyear_matchmaker_core.workspace = true
lightyear_matchmaker_nats.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
